--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -17,16 +17,19 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v2 
+        uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribution: 'adoptium'
+          distribution: 'temurin'
 
       - name: Check Maven version
-        run: mvn -v 
+        run: mvn -v
 
       - name: Build with Maven
         run: mvn clean install
+
+      - name: Run tests
+        run: mvn test
 
       - name: Run tests
         run: mvn test
