--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Java CI with Gradle
 
 on:
   push:
@@ -22,14 +22,16 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: Check Maven version
-        run: mvn -v
+      - name: Cache Gradle dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Build with Gradle
+        run: ./gradlew build
 
-      - name: Run tests
-        run: mvn test
-
-      - name: Run tests
-        run: mvn test
+      - name: Run tests with Gradle
+        run: ./gradlew test
