--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -1,4 +1,4 @@
-name: Build and Test with Gradle
+name: Run JUnit tests
 
 on:
   push:
@@ -9,19 +9,24 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install Gradle
+      - name: Set up JDK 11
+        uses: actions/setup-java@2
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y gradle
+          sudo apt-get install -y maven
 
-      - name: Run Gradle build and tests
+      - name: Run JUnit tests
         run: |
-          gradle clean build
-          gradle test
+          mvn clean test
